# libchecksum

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
include/libchecksum/: checksums.h  common.h  crc.h
src/: adler.cpp  checksum_impl.h  checksums.cpp  crc.cpp  fletcher.cpp  sum.cpp
test/: checksums.cpp  crc.cpp  main.cpp  testfile.txt
